--- a/src/styles/HeroModal.css
+++ b/src/styles/HeroModal.css
@@ -1,4 +1,6 @@
+/* src/components/HeroModal.css */
 
+/* Overlay para o modal */
 .hero-modal-overlay {
   position: fixed;
   top: 0;
@@ -77,12 +79,14 @@
 }
 
 .hero-thumbnail-modal {
-  width: 80px;
-  height: 120px;
-  object-fit: cover;
-  border-radius: 8px;
-  margin-right: 15px;
+  width: 150px; /* Ajuste conforme necessário */
+  height: 150px; /* Altura igual à largura para formato circular */
+  border-radius: 50%; /* Deixa a imagem em formato circular */
+  object-fit: cover; /* Garante que a imagem se ajuste ao container */
+  border: 2px solid #ddd; /* Opcional: borda para destacar a imagem */
+  margin-right: 15px; /* Espaçamento, se necessário */
 }
+
 
 .hero-info-modal {
   flex: 1;
